--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,24 @@
 Package: MplusTrees
 Type: Package
-Title: Pairs recursive partitioning with Mplus to create subgroups based on 
-        structural equation models
+Title: Decision Trees with Structural Equation Models Fit in Mplus
 Version: 0.1.4
-Author: Ross Jacobucci [aut,cre],
+Author: Sarfaraz Serang [aut,cre],
+		Ross Jacobucci [aut,cre],
         Kevin J. Grimm [ctb],
-        Sarfaraz Serang [ctb],
         Gabriela Stegmann [ctb]
-Maintainer: Ross Jacobucci <rcjacobuc@gmail.com>
+Maintainer: Sarfaraz Serang <sarfaraz.serang@usu.edu>
 Depends: 
          R (>= 2.10),
          rpart,
          MplusAutomation,
-         snowfall,
-         nlme
+         nlme,
+		 rpart.plot
+Suggests:
+		lavaan		 
 Description: The MplusTrees package uses recursive partitioning to create
-            homogenous subgroups based on structural equation models (SEM). This entails
-            specifying any form of SEM that Mplus can fit. 
+            homogenous subgroups based on structural equation models fit in Mplus.
 License: GPL
 Encoding: UTF-8
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
 LazyData: true
+
